--- a/index.html
+++ b/index.html
@@ -3,3 +3,24 @@ layout: home
 title: Dhruvi Sisodiya
 subtitle: Senior Undergraduate at IIT Gandhinagar
 ---
+
+<section id="about-me">
+  <h2>About Me</h2>
+  <p>
+    I am a senior undergraduate at IIT Gandhinagar with a strong interest in 
+    business analytics, strategy, and design.
+    My background in Chemical Engineering, combined with hands-on project 
+    experience, has helped me build strong technical, analytical, and 
+    creative skills. I enjoy solving complex problems, leading teams, 
+    and presenting ideas through impactful visuals and data-driven insights.
+  </p>
+
+  <h3>Skills & Interests</h3>
+  <ul>
+    <li><b>Programming Languages:</b> Python, SQL, MATLAB</li>
+    <li><b>Tools:</b> Advanced Excel, Polymath, COMSOL, Gretl, LaTeX, Autodesk Inventor, ANSYS, Adobe Illustrator, Canva</li>
+    <li><b>Relevant Courses:</b> Business Strategy, Marketing Analytics, Business Communication, Strategic Leadership</li>
+    <li><b>Fields of Interest:</b> Business Analytics, Strategy Consulting, Market Research, Process Optimization & Refinery Operations, Technology Commercialization & Business Development, Energy Economics and Sustainability, Cleaner Fuels</li>
+  </ul>
+</section>
+
